--- a/projects/cute/project.json
+++ b/projects/cute/project.json
@@ -439,113 +439,8 @@
     {
       "id": "_qgyc2a1gz",
       "trackId": "_123pvido2",
-      "note": 31,
+      "note": 60,
       "position": 1920,
-      "length": 240
-    },
-    {
-      "id": "_652ngawsk",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 2400,
-      "length": 240
-    },
-    {
-      "id": "_jflng7rm5",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 2880,
-      "length": 240
-    },
-    {
-      "id": "_agipcq6gv",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 3360,
-      "length": 240
-    },
-    {
-      "id": "_2mum0ez6w",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 3840,
-      "length": 240
-    },
-    {
-      "id": "_1noa6voxm",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 4320,
-      "length": 240
-    },
-    {
-      "id": "_bhnniec65",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 4800,
-      "length": 240
-    },
-    {
-      "id": "_tavehazgm",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 5280,
-      "length": 240
-    },
-    {
-      "id": "_xfxkct43k",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 5760,
-      "length": 240
-    },
-    {
-      "id": "_rzikws8yk",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 6240,
-      "length": 240
-    },
-    {
-      "id": "_6lhjqu4dt",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 6720,
-      "length": 240
-    },
-    {
-      "id": "_l9lflanm3",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 7200,
-      "length": 240
-    },
-    {
-      "id": "_bihkg7f2b",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 7680,
-      "length": 240
-    },
-    {
-      "id": "_490uncdrp",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 8160,
-      "length": 240
-    },
-    {
-      "id": "_axcvs8alk",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 8640,
-      "length": 240
-    },
-    {
-      "id": "_k5iwajm1s",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 9120,
       "length": 240
     },
     {
@@ -665,118 +560,6 @@
       "trackId": "_gvdkidxyp",
       "note": 76,
       "position": 13200,
-      "length": 240
-    },
-    {
-      "id": "_g67y2xdvc",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 9600,
-      "length": 240
-    },
-    {
-      "id": "_ggu7r94lx",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 10080,
-      "length": 240
-    },
-    {
-      "id": "_atm3rnv86",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 10560,
-      "length": 240
-    },
-    {
-      "id": "_c9x7uv8ru",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 11040,
-      "length": 240
-    },
-    {
-      "id": "_jtif2tmxs",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 11520,
-      "length": 240
-    },
-    {
-      "id": "_0vgdy9vbz",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 12000,
-      "length": 240
-    },
-    {
-      "id": "_wmfarx9yx",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 12480,
-      "length": 240
-    },
-    {
-      "id": "_i3a59u6km",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 12960,
-      "length": 240
-    },
-    {
-      "id": "_a0jj1ghmk",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 13440,
-      "length": 240
-    },
-    {
-      "id": "_eaio7oeql",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 13920,
-      "length": 240
-    },
-    {
-      "id": "_4h3340g2p",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 14400,
-      "length": 240
-    },
-    {
-      "id": "_86j5z5qbj",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 14880,
-      "length": 240
-    },
-    {
-      "id": "_1jmpr5bqm",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 15360,
-      "length": 240
-    },
-    {
-      "id": "_s874edi7o",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 15840,
-      "length": 240
-    },
-    {
-      "id": "_6ia18i6mt",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 16320,
-      "length": 240
-    },
-    {
-      "id": "_anar7pgkx",
-      "trackId": "_123pvido2",
-      "note": 31,
-      "position": 16800,
       "length": 240
     },
     {
@@ -1142,6 +925,286 @@
       "note": 41,
       "position": 15840,
       "length": 240
+    },
+    {
+      "id": "_ab210a3yz",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 2640,
+      "length": 240
+    },
+    {
+      "id": "_s0b2xc9kc",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 3120,
+      "length": 240
+    },
+    {
+      "id": "_o0aem6sdo",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 2400,
+      "length": 240
+    },
+    {
+      "id": "_oq5iocqfp",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 3360,
+      "length": 240
+    },
+    {
+      "id": "_s6e5gua2o",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 3840,
+      "length": 240
+    },
+    {
+      "id": "_qyklw7dh1",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 4560,
+      "length": 240
+    },
+    {
+      "id": "_afe2yutwr",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 4320,
+      "length": 240
+    },
+    {
+      "id": "_28zmzbbxr",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 5040,
+      "length": 240
+    },
+    {
+      "id": "_ujmqooe7n",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 5280,
+      "length": 240
+    },
+    {
+      "id": "_m52orkiv3",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 5760,
+      "length": 240
+    },
+    {
+      "id": "_1mazw08a2",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 6480,
+      "length": 240
+    },
+    {
+      "id": "_8yudubtfx",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 6240,
+      "length": 240
+    },
+    {
+      "id": "_neswv34a8",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 6960,
+      "length": 240
+    },
+    {
+      "id": "_7w12p88kp",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 7200,
+      "length": 240
+    },
+    {
+      "id": "_5k71z6osh",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 7680,
+      "length": 240
+    },
+    {
+      "id": "_xut4r6i4g",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 8400,
+      "length": 240
+    },
+    {
+      "id": "_4skp8zdtg",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 8160,
+      "length": 240
+    },
+    {
+      "id": "_xqx14kxav",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 8880,
+      "length": 240
+    },
+    {
+      "id": "_eux8ua6ed",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 9120,
+      "length": 240
+    },
+    {
+      "id": "_hwk3ypkd8",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_ql5l19ioq",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 10320,
+      "length": 240
+    },
+    {
+      "id": "_rbivn8oiv",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 10080,
+      "length": 240
+    },
+    {
+      "id": "_cf2hiv8uw",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 10800,
+      "length": 240
+    },
+    {
+      "id": "_qhys9pfna",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 11040,
+      "length": 240
+    },
+    {
+      "id": "_chn5sy37r",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_co4t3bpuk",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 12240,
+      "length": 240
+    },
+    {
+      "id": "_o0iq0w6wh",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 12000,
+      "length": 240
+    },
+    {
+      "id": "_jx1rmn9rv",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 12720,
+      "length": 240
+    },
+    {
+      "id": "_jh50errpw",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 12960,
+      "length": 240
+    },
+    {
+      "id": "_hwb2wasck",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 13440,
+      "length": 240
+    },
+    {
+      "id": "_1khudo8fi",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 14160,
+      "length": 240
+    },
+    {
+      "id": "_71gr5ht9v",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 13920,
+      "length": 240
+    },
+    {
+      "id": "_0t6rwv2n0",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 14640,
+      "length": 240
+    },
+    {
+      "id": "_sfvotzw2h",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 14880,
+      "length": 240
+    },
+    {
+      "id": "_uo6z2kdg3",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 16080,
+      "length": 240
+    },
+    {
+      "id": "_kyu3v4kde",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 15840,
+      "length": 240
+    },
+    {
+      "id": "_9sla00ut7",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 16560,
+      "length": 240
+    },
+    {
+      "id": "_bn42j4okn",
+      "trackId": "_123pvido2",
+      "note": 62,
+      "position": 16800,
+      "length": 240
+    },
+    {
+      "id": "_8zh4k00ir",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 15120,
+      "length": 240
+    },
+    {
+      "id": "_5g7m6rjo2",
+      "trackId": "_123pvido2",
+      "note": 60,
+      "position": 15600,
+      "length": 240
     }
   ],
   "tracks": [
@@ -1152,26 +1215,30 @@
       "instrumentId": "simple",
       "instrumentSettings": {
         "volume": 0.02500000037252903,
-        "sources": [
+        "ranges": [
           {
-            "WaveType": {
-              "waveType": "square"
-            },
-            "ADSR": {
-              "attackTime": 0.01,
-              "decayTime": 0.15,
-              "sustainLevel": 0.1,
-              "releaseTime": 0.1
-            },
-            "Vibrato": {
-              "delay": 0,
-              "attack": 0.1,
-              "freq": 0,
-              "depth": 0
-            },
-            "Amp": {
-              "amp": 1
-            }
+            "sources": [
+              {
+                "WaveType": {
+                  "waveType": "square"
+                },
+                "ADSR": {
+                  "attackTime": 0.01,
+                  "decayTime": 0.1,
+                  "sustainLevel": 0.7,
+                  "releaseTime": 0.1
+                },
+                "Vibrato": {
+                  "delay": 0,
+                  "attack": 0.1,
+                  "freq": 0,
+                  "depth": 0
+                },
+                "Amp": {
+                  "amp": 1
+                }
+              }
+            ]
           }
         ],
         "effects": [
@@ -1189,27 +1256,31 @@
       "color": "#29d",
       "instrumentId": "simple",
       "instrumentSettings": {
-        "volume": 0.029999999329447746,
-        "sources": [
+        "volume": 0.05299999937415123,
+        "ranges": [
           {
-            "WaveType": {
-              "waveType": "triangle"
-            },
-            "ADSR": {
-              "attackTime": 0.01,
-              "decayTime": 0.1,
-              "sustainLevel": 0.7,
-              "releaseTime": 0.1
-            },
-            "Vibrato": {
-              "delay": 0,
-              "attack": 0.1,
-              "freq": 0,
-              "depth": 0
-            },
-            "Amp": {
-              "amp": 1
-            }
+            "sources": [
+              {
+                "WaveType": {
+                  "waveType": "triangle"
+                },
+                "ADSR": {
+                  "attackTime": 0.01,
+                  "decayTime": 0.1,
+                  "sustainLevel": 0.7,
+                  "releaseTime": 0.1
+                },
+                "Vibrato": {
+                  "delay": 0,
+                  "attack": 0.1,
+                  "freq": 0,
+                  "depth": 0
+                },
+                "Amp": {
+                  "amp": 1
+                }
+              }
+            ]
           }
         ],
         "effects": [
@@ -1228,26 +1299,30 @@
       "instrumentId": "simple",
       "instrumentSettings": {
         "volume": 0.019999999552965164,
-        "sources": [
+        "ranges": [
           {
-            "WaveType": {
-              "waveType": "triangle"
-            },
-            "ADSR": {
-              "attackTime": 0.13,
-              "decayTime": 0.1,
-              "sustainLevel": 0.7,
-              "releaseTime": 0.1
-            },
-            "Vibrato": {
-              "delay": 0,
-              "attack": 0.1,
-              "freq": 0,
-              "depth": 0
-            },
-            "Amp": {
-              "amp": 1
-            }
+            "sources": [
+              {
+                "WaveType": {
+                  "waveType": "triangle"
+                },
+                "ADSR": {
+                  "attackTime": 0.14500000000000002,
+                  "decayTime": 0.1,
+                  "sustainLevel": 0.7,
+                  "releaseTime": 0.1
+                },
+                "Vibrato": {
+                  "delay": 0,
+                  "attack": 0.1,
+                  "freq": 0,
+                  "depth": 0
+                },
+                "Amp": {
+                  "amp": 1
+                }
+              }
+            ]
           }
         ],
         "effects": [
@@ -1265,27 +1340,31 @@
       "color": "#d29",
       "instrumentId": "simple",
       "instrumentSettings": {
-        "volume": 0.03500000014901161,
-        "sources": [
+        "volume": 0.029999999329447746,
+        "ranges": [
           {
-            "WaveType": {
-              "waveType": "sawtooth"
-            },
-            "ADSR": {
-              "attackTime": 0.01,
-              "decayTime": 0.1,
-              "sustainLevel": 0.7,
-              "releaseTime": 0.05
-            },
-            "Vibrato": {
-              "delay": 0,
-              "attack": 0.2,
-              "freq": 0.65,
-              "depth": 0.05
-            },
-            "Amp": {
-              "amp": 1
-            }
+            "sources": [
+              {
+                "WaveType": {
+                  "waveType": "sawtooth"
+                },
+                "ADSR": {
+                  "attackTime": 0.01,
+                  "decayTime": 0.1,
+                  "sustainLevel": 0.86,
+                  "releaseTime": 0.1
+                },
+                "Vibrato": {
+                  "delay": 0,
+                  "attack": 0.1,
+                  "freq": 0,
+                  "depth": 72
+                },
+                "Amp": {
+                  "amp": 1
+                }
+              }
+            ]
           }
         ],
         "effects": [
@@ -1303,40 +1382,81 @@
       "color": "#92d",
       "instrumentId": "simple-drum",
       "instrumentSettings": {
-        "volume": 0.07000000029802322,
-        "sources": [
+        "volume": 0.09000000357627869,
+        "ranges": [
           {
-            "WaveType": {
-              "waveType": "triangle"
-            },
-            "ADSR": {
-              "attackTime": 0.01,
-              "decayTime": 0.1,
-              "sustainLevel": 0.7,
-              "releaseTime": 0.1
-            },
-            "Pitch": {
-              "initialPitch": 401,
-              "lastPitch": 40,
-              "pitchDecay": 0.02
-            },
-            "Amp": {
-              "amp": 1
-            }
+            "sources": [
+              {
+                "WaveType": {
+                  "waveType": "triangle"
+                },
+                "ADSR": {
+                  "attackTime": 0.0050000000000000044,
+                  "decayTime": 0.10000000000000002,
+                  "sustainLevel": 0,
+                  "releaseTime": 0
+                },
+                "Pitch": {
+                  "initialPitch": 419.4000000000001,
+                  "lastPitch": 41.9,
+                  "pitchDecay": 0.0185
+                },
+                "Amp": {
+                  "amp": 0.9480000138282776
+                }
+              },
+              {
+                "ADSR": {
+                  "attackTime": 0.01,
+                  "decayTime": 0.1,
+                  "sustainLevel": 0,
+                  "releaseTime": 0
+                },
+                "Noise": {
+                  "color": "white"
+                },
+                "Amp": {
+                  "amp": 0.13199999928474426
+                }
+              }
+            ]
           },
           {
-            "ADSR": {
-              "attackTime": 0.01,
-              "decayTime": 0.05,
-              "sustainLevel": 0,
-              "releaseTime": 0
-            },
-            "Noise": {
-              "color": "white"
-            },
-            "Amp": {
-              "amp": 0.20000000298023224
-            }
+            "sources": [
+              {
+                "WaveType": {
+                  "waveType": "square"
+                },
+                "ADSR": {
+                  "attackTime": 0.01,
+                  "decayTime": 0.12000000000000001,
+                  "sustainLevel": 0,
+                  "releaseTime": 0
+                },
+                "Pitch": {
+                  "initialPitch": 518.9,
+                  "lastPitch": 43.8,
+                  "pitchDecay": 0.1
+                },
+                "Amp": {
+                  "amp": 0.02800000086426735
+                }
+              },
+              {
+                "ADSR": {
+                  "attackTime": 0.01,
+                  "decayTime": 0.05000000000000001,
+                  "sustainLevel": 0,
+                  "releaseTime": 0
+                },
+                "Noise": {
+                  "color": "white"
+                },
+                "Amp": {
+                  "amp": 0.36000004410743713
+                }
+              }
+            ]
           }
         ],
         "effects": [
@@ -1349,12 +1469,12 @@
       }
     }
   ],
-  "focusedTrack": "_123pvido2",
-  "cursor": 18320,
+  "focusedTrack": "_yjpud334f",
+  "cursor": 13440,
   "stepLength": 240,
   "visibleArea": {
     "from": 0,
-    "to": 31901.82465108118
+    "to": 31901.824651081348
   },
-  "recording": false
+  "recording": true
 }
