--- a/projects/TokinoKairo/project.json
+++ b/projects/TokinoKairo/project.json
@@ -4475,7 +4475,7 @@
           }
         }
       ],
-      "volume": 0.019999999552965164
+      "volume": 0.026999998837709427
     },
     {
       "id": "_cvntna65n",
@@ -4654,7 +4654,7 @@
           }
         }
       ],
-      "volume": 0.019999999552965164
+      "volume": 0.025999998673796654
     },
     {
       "id": "_dbi1mz80u",
@@ -4789,12 +4789,12 @@
       "volume": 0.019999999552965164
     }
   ],
-  "focusedTrack": "_cvntna65n",
-  "cursor": 77715,
+  "focusedTrack": "_pgsypcvd6",
+  "cursor": 3557,
   "stepLength": 120,
   "visibleArea": {
-    "from": 53253.25345897084,
-    "to": 79879.88018845626
+    "from": 0,
+    "to": 17818.493667917268
   },
   "recording": true
 }
